--- a/lamp_haproxy/roles/db/tasks/main.yml
+++ b/lamp_haproxy/roles/db/tasks/main.yml
@@ -4,7 +4,8 @@
 - name: Install Mysql package
   yum: name={{ item }} state=present
   with_items:
-   - mysql-server
+   #- mysql-server
+   - http://dev.mysql.com/get/mysql-community-release-el7-7.noarch.rpm
    - MySQL-python
 
 - name: Configure SELinux to start mysql on any port
