comment out mysql-community-server/client

--- a/lamp_haproxy/roles/db/tasks/main.yml
+++ b/lamp_haproxy/roles/db/tasks/main.yml
@@ -6,8 +6,8 @@
 - name: Install MySQL 5.7
   yum: pkg={{ item }}
   with_items:
-  - mysql-community-server
-  - mysql-community-client
+  # - mysql-community-server
+  # - mysql-community-client
   - MySQL-python
 
 - name: Configure SELinux to start mysql on any port
